--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Purple Buzz</div>
+                <div class="sidebar-brand-text mx-3">Zay Shop</div>
             </a>
 
             <!-- Divider -->
@@ -59,7 +59,8 @@
                      data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" asp-action="index" asp-controller="Slider">Sliders</a>
-                        <a class="collapse-item" asp-action="index" asp-controller="Work">Works</a>
+                        <a class="collapse-item" asp-action="index" asp-controller="Category">Categories</a>
+                        <a class="collapse-item" asp-action="index" asp-controller="Product">Products</a>
                     </div>
                 </div>
             </li>
