--- a/Areas/Admin/Views/Product/Create.cshtml
+++ b/Areas/Admin/Views/Product/Create.cshtml
@@ -1,7 +1,7 @@
-﻿﻿@using ZayShop.Areas.Admin.Models.Work
+﻿@using ZayShop.Areas.Admin.Models.Work
 @model ProductCreateVM
 
-<form method="post" asp-action="create" asp-controller="product">
+<form method="post" asp-action="create" asp-controller="product" enctype="multipart/form-data">
     <div class="form-group">
         <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" placeholder="Enter name" />
@@ -9,28 +9,26 @@
     </div>
     <div class="form-group">
         <label asp-for="Size"></label>
-        <input asp-for="Size" class="form-control" placeholder="Enter Description" />
+        <input asp-for="Size" class="form-control" placeholder="Enter size" />
         <span asp-validation-for="Size" class="text-danger"></span>
     </div>
-
     <div class="form-group">
         <label asp-for="Price"></label>
-        <input asp-for="Price" class="form-control" placeholder="Enter name" />
+        <input asp-for="Price" class="form-control" placeholder="Enter price" />
         <span asp-validation-for="Price" class="text-danger"></span>
     </div>
-
     <div class="form-group">
-        <label asp-for="PhotoPath"></label>
-        <input asp-for="PhotoPath" class="form-control" placeholder="Enter name" />
-        <span asp-validation-for="PhotoPath" class="text-danger"></span>
+        <label asp-for="Photo"></label>
+        <input asp-for="Photo" type="file" class="form-control" />
+        <span asp-validation-for="Photo" class="text-danger"></span>
     </div>
-
     <div class="form-group">
         <label asp-for="CategoryId"></label>
-        <select asp-for="CategoryId" asp-items="Model.Categories" />
+        <select asp-for="CategoryId" asp-items="Model.Categories" class="form-control">
+            <option value="">-- Select a Category --</option>
+        </select>
         <span asp-validation-for="CategoryId" class="text-danger"></span>
     </div>
-
 
     <button type="submit" class="btn btn-primary">Create</button>
 </form>
