--- a/Areas/Admin/Views/Product/Index.cshtml
+++ b/Areas/Admin/Views/Product/Index.cshtml
@@ -1,15 +1,17 @@
 ﻿@using ZayShop.Areas.Admin.Models.Product
 @model ProductIndexVM
-@if (Model.Products.Count != 0)
-{
+
+
 	<table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
 		<thead>
+		<a class="btn btn-primary" asp-controller="Product" asp-action="Create" >Create</a>
+		
 			<tr>
-				<th class="text-success">Photo</th>
-				<th class="text-info">Title</th>
-				<th class="text-dark">Sizes</th>
-				<th class="text-danger">Price</th>
-				<th class="text-danger">Category</th>
+				<th>Photo</th>
+				<th>Title</th>
+				<th>Sizes</th>
+				<th>Price</th>
+				<th>Category</th>
 				<th>Actions</th>
 			</tr>
 		</thead>
@@ -19,11 +21,11 @@
 			@foreach (var product in Model.Products)
 			{
 				<tr>
-					<td class="text-gray-500 w-25"><img style="width:50%; transform:translateX(80px); height:100px; border-radius:5px; object-fit:cover" src="@product.PhotoPath" title="Photo" /></td>
-					<td class="text-gray-500">@product.Name</td>
-					<td class="text-gray-500">@product.Size</td>
-					<td class="text-gray-500">$@product.Price</td>
-					<td class="text-gray-500">@product.Categories[0].Value</td>
+					<td><img style="width:50%; transform:translateX(80px); height:100px; border-radius:5px; object-fit:cover" src="@product.PhotoPath" title="Photo" /></td>
+					<td >@product.Name</td>
+					<td>@product.Size</td>
+					<td>$@product.Price</td>
+					<td>@product.Category</td>
 					<td>
 						<a class="btn btn-primary" asp-controller="Product" asp-action="Update" asp-route-id="@product.Id">Update</a>
 						<form class="d-inline" method="post" asp-controller="Product" asp-action="Delete" asp-route-id="@product.Id">
@@ -36,4 +38,3 @@
 
 		</tbody>
 	</table>
-}
