--- a/Areas/Admin/Views/Product/Update.cshtml
+++ b/Areas/Admin/Views/Product/Update.cshtml
@@ -20,17 +20,16 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="PhotoPath"></label>
-        <input asp-for="PhotoPath" class="form-control" placeholder="Enter name" />
-        <span asp-validation-for="PhotoPath" class="text-danger"></span>
+        <label asp-for="Photo"></label>
+        <input asp-for="Photo" class="form-control" placeholder="choose photo" />
+        <span class="text-danger" asp-validation-for="Photo"></span>
     </div>
 
     <div class="form-group">
         <label asp-for="CategoryId"></label>
-        <select asp-for="CategoryId" asp-items="Model.Categories" />
+        <select asp-for="CategoryId" asp-items="Model.Categories" class="form-control"></select>
         <span asp-validation-for="CategoryId" class="text-danger"></span>
     </div>
-
 
     <button type="submit" class="btn btn-primary">Update</button>
 </form>
