--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -217,11 +217,12 @@
     </footer>
     <!-- End Footer -->
     <!-- Start Script -->
-    <script  src="~/assets/css/js/jquery-1.11.0.min.js"></script>
-    <script  src="~/assets/css/js/jquery-migrate-1.2.1.min.js"></script>
-    <script  src="~/assets/css/js/bootstrap.bundle.min.js"></script>
-    <script  src="~/assets/css/js/templatemo.js"></script>
-    <script  src="~/assets/css/js/custom.js"></script>
+    <script  src="~/assets/js/jquery-1.11.0.min.js"></script>
+    <script  src="~/assets/js/jquery-migrate-1.2.1.min.js"></script>
+    <script  src="~/assets/js/bootstrap.bundle.min.js"></script>
+    <script  src="~/assets/js/templatemo.js"></script>
+    <script  src="~/assets/js/custom.js"></script>
+    <script  src="~/assets/js/shop-filter.js"></script>
     <!-- End Script -->
 </body>
 
